Fixes to hovering subscribe module on mobile/responsive site

--- a/assets/css/dropdown.css
+++ b/assets/css/dropdown.css
@@ -1,16 +1,18 @@
-li.menu-item-has-children {
+/* desktop */
+@media (min-width: 767px) {
+  li.menu-item-has-children {
     position: relative;
-    padding-right: 20px!important;
+    padding-right: 20px !important;
     display: inline-block;
-}
-.menu-item-has-children svg {
+  }
+  .menu-item-has-children svg {
     position: absolute;
     right: -6px;
-    top: 56%;
+    top: 52%;
     transform: translate(-0%, -50%) scale(1);
-}
+  }
 
-ul.ghost-submenu {
+  ul.ghost-submenu {
     background: #fff;
     color: #000;
     padding: 10px 20px;
@@ -25,23 +27,81 @@ ul.ghost-submenu {
     transition: 0.3s;
     box-shadow: 0 1px 5px 0 rgb(0 0 0 / 14%);
     left: 0;
-}
+  }
 
-li.menu-item-has-children:hover ul.ghost-submenu {
-    visibility: visible!important;
-    opacity: 1!important;
-    top: 45px!important;
-}
+  li.menu-item-has-children:hover ul.ghost-submenu {
+    visibility: visible !important;
+    opacity: 1 !important;
+    top: 45px !important;
+  }
 
-ul.ghost-submenu li {
+  ul.ghost-submenu li {
     list-style: none;
-}
+  }
 
-ul li {
+  ul li {
     opacity: 0;
-}
+  }
 
-li.nav-item.menu-item-has-children.menu-item-has-megamenu ul.ghost-submenu {
+  li.nav-item.menu-item-has-children.menu-item-has-megamenu ul.ghost-submenu {
     width: 100vh;
+  }
 }
-
+/* mobile nav css is completly separated */
+@media (max-width: 767px) {
+  .menu-item-has-children svg {
+    display: none;
+  }
+  /* added new svg for mobile nav (becuase position absolute will not works for long names )*/
+  .menu-item-has-children svg.m-svg {
+    display: inline;
+    transition: all 500ms;
+    margin-left: 1rem;
+    margin-bottom: 5px;
+  }
+  .menu-item-has-children.show-submenu svg.m-svg {
+    rotate: 180deg;
+  }
+  .menu-item-has-children .ghost-submenu {
+    height: 0;
+    opacity: 0;
+    transition: all 700ms;
+  }
+  .menu-item-has-children .ghost-submenu a {
+    display: none;
+  }
+  .menu-item-has-children.show-submenu .ghost-submenu a {
+    display: block;
+  }
+  .menu-item-has-children.show-submenu .ghost-submenu {
+    display: block;
+    height: auto;
+    opacity: 1;
+    margin: 0;
+    background: #fff;
+    color: #000;
+    padding: 10px 20px;
+    border-radius: 5px;
+    z-index: 1;
+    box-shadow: 0 1px 5px 0 rgb(0 0 0 / 14%);
+  }
+  #gh-head .gh-head-menu > .nav {
+    align-items: start;
+  }
+  #gh-head .gh-head-menu > .nav > li {
+    width: 100%;
+  }
+  #gh-head .gh-head-menu > .nav > li > a {
+    width: 100%;
+  }
+  #gh-head .ghost-submenu a {
+    font-size: 2rem;
+  }
+  #gh-head .ghost-submenu li {
+    list-style: none;
+  }
+  /* bottom subscribe bottom */
+  .gh-head-open #gh-head .gh-head-actions {
+    position: relative;
+  }
+}
